fixed lines going too far on mobile view page

--- a/src/App.css
+++ b/src/App.css
@@ -139,65 +139,11 @@
     margin-bottom: 18px;
     margin-left: 16px;
   }
-  /* .checkbox {
-    margin-left: 24px;
-    height: 25px;
-    width: 25px;
-    appearance: none;
-    border: 1px solid #b4b4b4;
-    border-radius: 4px;
-  } */
 
   .checkbox:checked {
     border: none;
     background-image: url("./Assets/Checkbox.svg");
   }
-
-  /* .editList { */
-  /* border: 1px solid red; */
-  /* Type=Lists, Size=Desktop */
-
-  /* Auto layout */
-
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: flex-start; */
-  /* padding: 0px; */
-
-  /* position: static;
-    height: 96px;
-    left: 20px;
-    top: 136px;
-
-    background: #ffffff; */
-
-  /* Inside auto layout */
-
-  /* flex: none; */
-  /* order: 1;
-    flex-grow: 0;
-    margin: 20px 0px;
-  } */
-
-  /* .filterColor {
-    filter: invert(33%) sepia(0%) saturate(6%) hue-rotate(151deg)
-      brightness(86%) contrast(87%);
-    width: 61px;
-    height: 22px;
-    left: 15.25px; */
-  /* identical to box height */
-
-  /* letter-spacing: -0.005em; */
-
-  /* Dark Gray */
-
-  /* color: #505050;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 32px;
-    margin-bottom: 24px;
-    margin-left: 24px;
-  } */
 
   .imageDiv {
     float: right;
@@ -216,11 +162,13 @@
     align-items: center;
   }
 
+  .viewLineTextContainer {
+    width: 85% !important;
+  }
+
   .ellipses {
     position: absolute;
     right: 17px;
-    /* width: 16.25px; */
-    /* height: 3.75px; */
   }
 
   .dropDown {
@@ -252,127 +200,16 @@
     width: 99%;
   }
 
-  /* .doneButton {
-    height: 18px;
-    width: 46px;
-    color: #505050;
-    filter: invert(33%) sepia(0%) saturate(6%) hue-rotate(151deg)
-      brightness(86%) contrast(87%);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 32px;
-    margin-bottom: 24px;
-    margin-left: 50%;
-  } */
-  /* .lineItemText {
-    font-family: "Inter", sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 25px;
-    letter-spacing: -0.005em;
-    text-align: left;
-    caret-color: #2fe6ff;
-    outline: none;
-    border-style: none;
-    border-color: Transparent;
-    overflow: hidden;
-    resize: none;
-    margin-left: 16px;
-    width: 919px;
-    height: auto;
-  } */
-  /* .checkbox {
-    margin-left: 24px;
-    height: 25px;
-    width: 25px;
-    appearance: none;
-    border: 1px solid #b4b4b4;
-    border-radius: 4px;
-  } */
-
-  .checkbox:checked {
-    border: none;
-    background-image: url("./Assets/Checkbox.svg");
-  }
-  /* view list page */
-  /* .viewListHeader { */
-  /* border: 1px solid red; */
-  /* Type=Lists, Size=Desktop */
-
-  /* Auto layout */
-
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: flex-start; */
-  /* padding: 0px;
-
-    position: static;
-    height: 96px;
-    left: 20px;
-    top: 136px;
-
-    background: #ffffff; */
-
-  /* Inside auto layout */
-
-  /* flex: none; */
-  /* order: 1;
-    flex-grow: 0;
-    margin: 0px 20px; */
-  /* } */
   .backButton {
     width: 61px;
     height: 22px;
-    /* left: 15.25px; */
-    /* identical to box height */
 
     letter-spacing: -0.005em;
-
-    /* Dark Gray */
-
-    /* padding-top: 5px;
-    padding-bottom: 5px; */
-    /* position: absolute; */
-
-    /* margin-top: 32px;
-    margin-bottom: 24px;
-    margin-left: 24px; */
   }
-
-  /* .listTitleView {
-    font-family: "Inter", sans-serif;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 26px;
-    letter-spacing: -0.01em;
-    text-align: left;
-    margin-left: 24px;
-  } */
-
-  /* .viewLineText {
-    font-family: "Inter", sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 25px;
-    letter-spacing: -0.005em;
-    text-align: left;
-    margin-left: 16px;
-  } */
-  /* .ellipses-view {
-    position: absolute;
-    right: 24px;
-    top: 40px;
-  } */
 }
 
 /* Overall */
-/* .editContainer:hover {
-  border: 1px solid red;
-  background-color: #f4f4f4;
-} */
+
 .listItem {
   z-index: 1 !important;
   position: relative;
@@ -516,8 +353,6 @@
 .backButton:active > .backButtonContent {
   fill: #2fe6ff !important;
 }
-/* ellipsesBackground
-ellipsesDots */
 
 .noClick {
   pointer-events: none;
